--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "jquery": "^2.2.3"
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
